--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,1 +1,2 @@
 1.1.1   2024-06-07  Initial Release
+1.2.1   2024-06-09  Updates to positive semi-definite adjustment process for the portfolio correlation matrix. 
