--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,5 @@
 1.1.1   2024-06-07  Initial Release
 1.2.1   2024-06-09  Updates to positive semi-definite adjustment process for the portfolio correlation matrix. 
 1.3.1   2024-06-11  Added yearly portfolio to the output.
-1.4.1   2024-06-12  Removed model configuration from the input/output
+1.4.1   2024-06-12  Removed model configuration from the input/output.
+2.4.1   2024-06-18  Added GHG_Port.xlsm to manually create portfolios.
