--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,3 +3,4 @@
 1.3.1   2024-06-11  Added yearly portfolio to the output.
 1.4.1   2024-06-12  Removed model configuration from the input/output.
 2.4.1   2024-06-18  Added GHG_Port.xlsm to manually create portfolios.
+2.4.2   2024-06-19  Minor code adjustments.
